hphp/hack/test/enum_atom/typing/atom_sugar.php.exp
File "atom_sugar.php", line 26, characters 3-9:
Unknown constant B in EE (Typing[4394])
File "atom_sugar.php", line 28, characters 3-20:
Unknown constant B in EE (Typing[4394])
